@@ -8,13 +8,13 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkColor.h,v 1.11 2007/12/13 15:24:13 dgp Exp $
+ * RCS: @(#) $Id: tkColor.h,v 1.12 2010/04/20 15:14:29 nijtmans Exp $
  */
 
 #ifndef _TKCOLOR
 #define _TKCOLOR
 
-#include <tkInt.h>
+#include "tkInt.h"
 
 #ifdef BUILD_tk
 #undef TCL_STORAGE_CLASS
