@@ -11,10 +11,10 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: xgc.c,v 1.17 2009/06/29 14:35:01 das Exp $
+ * RCS: @(#) $Id: xgc.c,v 1.18 2010/04/20 15:14:30 nijtmans Exp $
  */
 
-#include <tkInt.h>
+#include "tkInt.h"
 
 #if !defined(MAC_OSX_TK)
 #   include <X11/Xlib.h>
